export const languageNames = {
  "en": "English",
  "ru": "Русский",
  "uk": "Українська"
};

